[package]
name = "pinsel"
version = "0.1.0"
authors = ["mangoiv <mangoiv@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xiao_m0 = "0.9"
cortex-m = "0.6.2"
panic-halt = "0.2"
keyberon = "0.1.0"
generic-array = "0.13"
embedded-hal = "0.2.3"
nb = "0.1"
cortex-m-rtic = "0.5"
usb-device = "0.2.0"

[dependencies.atsamd-hal]
version ="0.12"
default-features = true

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true

[features]
default = ["xiao_m0/rt", "xiao_m0/cortex-m-rt", "xiao_m0/usb", "xiao_m0/unproven", "xiao_m0/usb-device"]
